# vm_c

./: .gitignore  CMakeLists.txt  llama_cpp_flowchart.md
cmake/: FindNCCL.cmake  LlamaIntegration.cmake  VmCEnv.cmake
include/vm_c/core/: config.hpp  engine.hpp  ggml_dequant.hpp  gguf_reader.hpp  iq4xs_types.hpp  logits_sample_plan.hpp  request.hpp  scheduler.hpp  tensor.hpp
include/vm_c/cuda/: convert_kernels.h  gpu_arch.hpp  kernel_utils.h  kernels.hpp  kernels_attention.h  kernels_cache.h  kernels_flash_attn.h  kernels_fused_attn.h  kernels_gdn.h  kernels_moe.h  kernels_norm.h  kernels_pos_encoding.h  kernels_quant.h  kernels_sampler.h  kernels_turboquant.h  vllm_kernel_ops.h  vm_c_dispatch.h  vm_c_tensor.h
include/vm_c/distributed/: nccl_comm.h  tp_runtime.hpp
include/vm_c/memory/: expert_cache.hpp  kv_cache_manager.hpp  uva_offload.hpp
include/vm_c/model/: attention_backend.hpp  attention_metadata.hpp  forward_context.hpp  llama_gguf_tensor_map.hpp  model_loader.hpp  models.hpp  weight_layout_plan.hpp
include/vm_c/official/: ggml_backend_pool.hpp  ggml_weight.hpp  llama_runtime.hpp  turboquant_kv_bridge.hpp  vm_c_hidden_log.hpp  vm_c_llama_graph_ext.h
include/vm_c/server/: http_server.hpp
include/vm_c/speculative/: speculative_engine.hpp
include/vm_c/tokenizer/: gguf_tokenizer.hpp  incremental_detokenizer.hpp  jinja_template.hpp  tokenizer.hpp
scripts/: apply_ggml_vm_c.sh  vendor_official.sh
src/: main.cpp
src/core/: config.cpp  engine.cpp  ggml_dequant.cpp  gguf_reader.cpp  logits_sample_plan.cpp  request.cpp  scheduler.cpp  tensor.cpp
src/cuda/: attention_kernels.cu  cache_kernels.cu  convert_kernels.cu  flash_attn_v2_kernels.cu  fused_attn_kernels.cu  gdn_kernels.cu  kernels.cpp  moe_kernels.cu  norm_kernels.cu  pos_encoding_kernels.cu  quant_kernels.cu  sampler_kernels.cu  turboquant_kernels.cu  vllm_kernel_ops.cpp
src/distributed/: nccl_comm.cu  tp_runtime.cpp
src/memory/: allocator.cpp  expert_cache.cpp  kv_cache_manager.cpp  uva_offload.cpp
src/model/: attention_backend.cpp  forward_context.cpp  gguf_model_loader.cpp  llama_gguf_tensor_map.cpp  model_loader.cpp  models.cu  weight_layout_plan.cpp
src/official/: ggml_backend_pool.cpp  ggml_weight.cpp  llama_batch_builder.cpp  llama_runtime.cpp  turboquant_kv_bridge.cpp
src/official/llama/: CMakeLists.txt  llama-context.cpp  llama-context.h  llama-cparams.h  llama-graph.cpp  llama-graph.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-memory-hybrid-iswa.cpp  llama-memory-hybrid-iswa.h  llama-memory-hybrid.cpp  llama-memory-hybrid.h  llama-memory-recurrent.cpp  llama-memory-recurrent.h  llama-model-loader.cpp  llama-model.cpp  llama-model.h  llama.cpp  llama.h  unicode.cpp  unicode.h  vm_c_hidden_log.cpp
src/official/llama/jinja/: caps.cpp  jinja_caps.h  jinja_lexer.h  jinja_parser.h  jinja_runtime.h  jinja_string.h  jinja_value.h  lexer.cpp  parser.cpp  runtime.cpp  string.cpp  value.cpp
src/official/llama/models/: delta-net-base.cpp  llama.cpp  qwen35moe.cpp
src/server/: http_server.cpp  openai_api.cpp
src/speculative/: mtp_engine.cpp
src/tokenizer/: gguf_tokenizer.cpp  incremental_detokenizer.cpp  jinja_template.cpp  tokenizer.cpp
